# trading-tools

./: .gitignore  README.md  README_FR.md  index.html
apps/angular/: angular.json  package-lock.json  package.json  tsconfig.json
apps/angular/src/: styles.css
apps/angular/src/app/: app.ts
apps/server/: pyproject.toml  readme.md
apps/server/src/: config.py  main.py
apps/server/src/api/: handlers.py  routes.py
apps/server/src/services/: data_analyzer.py  mt4_parser.py  visualization.py
apps/server/src/templates/: index.html
