[project]
name = "server"
version = "0.1.0"
description = "A FastAPI application for tracking and analyzing trade data from MT4 exports."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1.2",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "beautifulsoup4>=4.11.0",
    "plotly>=5.0.0",
    "python-multipart>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]